// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleGeminiApi.requestTemplate doesnt include prompt if contents end with a user role 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-text",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, contents 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-user-text",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-model-text-2",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, contents with function_call 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "function_call": {
            "args": {
              "key": "value",
            },
            "name": "mock-function",
          },
        },
      ],
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, contents with function_response 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "function_response": {
            "name": "mock-function",
            "response": {
              "key": "value",
            },
          },
        },
      ],
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, contents, system_instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-user-text",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-model-text-2",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, examplePairs 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-msg-1",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-1",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-user-msg-2",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-2",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, examplePairs, contents 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-msg-1",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-1",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, examplePairs, contents, system_instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-msg-1",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-1",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, examplePairs, system 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-msg-1",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-1",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, examplePairs, system_instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-user-msg-1",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "mock-assistant-msg-1",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, generation_config 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "generation_config": {
    "temperature": 0.7,
    "top_p": 0.9,
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, safety_settings 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "safety_settings": {
    "category": "mock-category",
    "threshold": "mock-threshold",
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, system 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, system, contents 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, system, system_instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
      {
        "text": "mock-additional-instruction",
      },
      {
        "text": "mock-additional-instruction-2",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, system_instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, tool, tools_config, system_instruction, safety_settings, generation_config 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-model-text",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "generation_config": {
    "max_output_tokens": 100,
    "top_p": 0.7,
  },
  "safety_settings": {
    "method": "mock-method",
    "threshold": "mock-threshold",
  },
  "system_instruction": {
    "parts": [
      {
        "text": "mock-system-text",
      },
    ],
  },
  "tools": [
    {
      "function_declarations": [
        {
          "name": "mock-function",
        },
      ],
    },
  ],
  "tools_config": {
    "mode": "ANY",
  },
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, tools 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "tools": [
    {
      "function_declarations": [
        {
          "description": "mock-description",
          "name": "mock-function",
          "parameters": {
            "properties": {
              "key": {
                "type": "STRING",
              },
            },
            "type": "OBJECT",
          },
        },
      ],
    },
  ],
}
`;

exports[`GoogleGeminiApi.requestTemplate prompt, tools_config 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "mock-prompt",
        },
      ],
      "role": "user",
    },
  ],
  "tools_config": {
    "allowed_function_names": [
      "mock-function",
    ],
    "mode": "AUTO",
  },
}
`;
